# Inklang

./: README.md  pyproject.toml
examples/: business_card.yaml  clients.csv
inklang/: __init__.py  cli.py  errors.py  exporter.py  parser.py  renderer.py  reverse_parser.py  reverse_parser_docs.py  schema.py  template_filler.py
tests/: test_exporter.py  test_parser.py  test_renderer.py  test_reverse_parser.py
