[project]
name = "inklang"
version = "0.1.0"
description = "A declarative YAML language for generating SVG designs, powered by Inkscape."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.4.2",
    "inkex>=1.4.1",
    "jinja2>=3.1.6",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
]

[project.scripts]
inklang = "inklang.cli:main"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["inklang"]
